--- a/package.json
+++ b/package.json
@@ -1,14 +1,40 @@
 {
   "name": "cdktf-testing",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Testing CDKTF",
-  "main": "index.js",
+  "main": "main.js",
+  "types": "main.ts",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "get": "cdktf get",
+    "build": "tsc",
+    "synth": "cdktf synth",
+    "compile": "tsc --pretty",
+    "watch": "tsc -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "upgrade": "npm i cdktf@latest cdktf-cli@latest",
+    "upgrade:next": "npm i cdktf@next cdktf-cli@next"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Beraliv/CDKTF-testing.git"
+  },
+  "engines": {
+    "node": ">=18.0"
+  },
+  "dependencies": {
+    "@cdktf/provider-docker": "11.0.0",
+    "cdktf": "0.20.3",
+    "constructs": "10.3.0"
+  },
+  "devDependencies": {
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.20",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   },
   "keywords": [
     "terraform",
@@ -16,7 +42,7 @@
     "aws"
   ],
   "author": "beraliv.spb@gmail.com",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/Beraliv/CDKTF-testing/issues"
   },
